<resources>
    <string name="app_name">Thousend - Score Points</string>
    <string name="action_settings">Settings</string>

    <string name="players">Players</string>
    <string name="contrats">Contracts</string>
    <string name="score">Scores</string>
    <string name="bombs">Bombs</string>
    <string name="title_activity_gra">Game</string>
    <string name="dialog_add_rozgrywka">Add play</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="set_contract_1">contract for player 1</string>
    <string name="set_contract_2">contract for player 2</string>
    <string name="set_contract_3">contract for player 3</string>
    <string name="set_contract_4">contract for player 4</string>
    <string name="dialog_add_gra">Set contract</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="set_score_1">Score player 1</string>
    <string name="set_score_2">Score player 2</string>
    <string name="set_score_3">Score player 3</string>
    <string name="set_score_4">Score player 4</string>
    <string name="dialog_set_wynik">Set score</string>
    <string name="number_of_play">Number of play:</string>
    <string name="score_title">"Score: "</string>
    <string name="set_bomb">BOMB</string>
    <string name="delete_message">Are you sure?</string>
    <string name="edit_contract">CONTRACT</string>
    <string name="edit_score">SCORE</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->

</resources>
