<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_numer_gry"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/text_view_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_status"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/table_summary_players"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/table_summary_players"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_numer_gry">

            <TableRow
                android:id="@+id/table_row_title"
                android:layout_width="match_parent"
                style="?android:listSeparatorTextViewStyle"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_static_players"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/players"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_static_bombs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bombs"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_static_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/score"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_player_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_player_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/text_view_bomb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/text_view_score_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_player_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_player_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/text_view_bomb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/text_view_score_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_player_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_player_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/text_view_bomb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/text_view_score_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_player_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_player_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/text_view_bomb_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/text_view_score_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/delete"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table_summary_players" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/edit"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintTop_toBottomOf="@+id/table_summary_players" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>