<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_numer_gry"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="tytul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/table_summary_players"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_numer_gry">

            <TableRow
                android:id="@+id/table_row_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_static_players"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/players"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_static_cpntract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contrats"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_static_bombs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bombs"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_static_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/score"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_player_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_player_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_contract_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_bomb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_score_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="viewEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_player_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_player_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_contract_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_bomb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_score_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="viewEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_player_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_player_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_contract_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_bomb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_score_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="viewEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_player_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/text_view_player_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_contract_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_bomb_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/text_view_score_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="viewEnd" />
            </TableRow>

        </TableLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>