<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table_summary_players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_numer_gry">

        <TableRow
            android:id="@+id/table_row_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:padding="2dp">

            <TextView
                android:id="@+id/text_view_static_summary_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/players"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_static_summary_bombs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bombs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_static_summary_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/table_row_summary_player_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:id="@+id/text_view_summary_player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_view_summary_bomb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_view_summary_score_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:id="@+id/table_row_summary_player_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:id="@+id/text_view_summary_player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_view_summary_bomb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_view_summary_score_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:id="@+id/table_row_summary_player_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:id="@+id/text_view_summary_player_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_view_summary_bomb_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_view_summary_score_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:id="@+id/table_row_summary_player_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:id="@+id/text_view_summary_player_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_view_summary_bomb_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_view_summary_score_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="viewEnd" />
        </TableRow>

    </TableLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_gra"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_summary_players" />
</android.support.constraint.ConstraintLayout>